--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Monish Driver</string>
+    <string name="app_name">נהג מוניש</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_settings">Settings</string>
 
